# Devpilot

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  process_manager.rs  registry.rs  scanner.rs
src/components/: EmptyState.tsx  ProjectCard.tsx
